--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "npmextatistic",
-  "version": "0.0.2",
+  "name": "extatistic",
+  "version": "0.0.3",
   "description": "The NPM package to perform statistical models on any text and extract specific features",
   "main": "index.js",
   "scripts": {
