Add package-lock file and A little change on readme

--- a/package.json
+++ b/package.json
@@ -23,8 +23,5 @@
   "bugs": {
     "url": "https://github.com/guardjs/npmExtatistic/issues"
   },
-  "homepage": "https://github.com/guardjs/npmExtatistic#readme",
-  "publishConfig": {
-    "registry": "https://npm.pkg.github.com/@guardjs"
-  }
+  "homepage": "https://github.com/guardjs/npmExtatistic#readme"
 }
