--- a/.github/workflows/gpr_publish.yml
+++ b/.github/workflows/gpr_publish.yml
@@ -3,7 +3,7 @@ name: Publish GPR Package
 on:
   release:
     types: [created]
-     branches:
+    branches:
       - develop
 
 jobs:
@@ -16,6 +16,9 @@ jobs:
           node-version: 12
       - run: npm ci
       - run: npm test
+      - run: npm run build
+      - run: cp -r ./package/. ./dist/
+      - run: cd dist
 
   publish-gpr:
     needs: build
@@ -27,7 +30,6 @@ jobs:
           node-version: 12
           registry-url: https://npm.pkg.github.com/
           scope: 'guardjs' #${{GITHUB_REPOSITORY}}
-      - run: npm ci
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
