--- a/.github/workflows/npm_publish.yml
+++ b/.github/workflows/npm_publish.yml
@@ -16,6 +16,9 @@ jobs:
           node-version: 12
       - run: npm ci
       - run: npm test
+      - run: npm run build
+      - run: cp -r ./package/. ./dist/
+      - run: cd dist
 
   publish-npm:
     needs: build
@@ -26,7 +29,6 @@ jobs:
         with:
           node-version: 12
           registry-url: https://registry.npmjs.org/
-      - run: npm ci
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
