--- a/.github/workflows/gpr_publish.yml
+++ b/.github/workflows/gpr_publish.yml
@@ -39,7 +39,6 @@ jobs:
           node-version: 12
           registry-url: https://npm.pkg.github.com/
           scope: ${{GITHUB_REPOSITORY}}
-      - run: cd dist
-      - run: npm publish
+      - run: cd dist && npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
