--- a/.github/workflows/gpr_publish.yml
+++ b/.github/workflows/gpr_publish.yml
@@ -29,7 +29,9 @@ jobs:
       - run: npm ci
       - run: npm test
       - run: npm run build
-      - run: cp -r ./package/. ./dist/
+      # - run: cp -r ./package/. ./dist/
+      - name: copy static files to ./dist/
+        run: cp -r ./package.json ./dist/ && cp -r ./LICENSE ./dist/ && cp -r ./README.md ./dist/ 
 
   publish-gpr:
     needs: build
@@ -40,7 +42,8 @@ jobs:
         with:
           node-version: 12
           registry-url: https://npm.pkg.github.com/
-          scope: guardjs
-      - run: cd dist && npm publish
+          # scope: guardjs
+      - name: publish GPR
+        run: cd dist && npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
