--- a/.github/workflows/npm_publish.yml
+++ b/.github/workflows/npm_publish.yml
@@ -15,7 +15,9 @@ jobs:
       - run: npm ci
       - run: npm test
       - run: npm run build
-      - run: cp -r ./package/. ./dist/
+      # - run: cp -r ./package/. ./dist/
+      - name: copy static files to ./dist/
+        run: cp -r ./package.json ./dist/ && cp -r ./LICENSE ./dist/ && cp -r ./README.md ./dist/ 
 
   publish-npm:
     needs: build
@@ -26,6 +28,7 @@ jobs:
         with:
           node-version: 12
           registry-url: https://registry.npmjs.org/
-      - run: cd dist && npm publish
+      - name: publish NPM
+        run: cd dist && npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
