--- a/.github/workflows/npm_publish.yml
+++ b/.github/workflows/npm_publish.yml
@@ -16,7 +16,7 @@ jobs:
       - run: npm test
       - run: npm run build
       # - run: cp -r ./package/. ./dist/
-      - name: copy static files to ./dist/
+      - name: Copy static files to ./dist/
         run: cp -r ./package.json ./dist/ && cp -r ./LICENSE ./dist/ && cp -r ./README.md ./dist/ 
 
   publish-npm:
@@ -28,7 +28,7 @@ jobs:
         with:
           node-version: 12
           registry-url: https://registry.npmjs.org/
-      - name: publish NPM
+      - name: Publish NPM
         run: cd dist && npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
