--- a/.github/workflows/gpr_publish.yml
+++ b/.github/workflows/gpr_publish.yml
@@ -44,6 +44,7 @@ jobs:
           registry-url: https://npm.pkg.github.com/
           # scope: guardjs
       - name: Publish GPR
-        run: cd dist && npm publish
+        # run: cd dist && npm publish
+        run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
