--- a/.github/workflows/gpr_publish.yml
+++ b/.github/workflows/gpr_publish.yml
@@ -27,7 +27,7 @@ jobs:
         with:
           node-version: 12
       - run: str="$(<./package.json)"
-      - run: str1="\}[\s\n\r]{1,3}\}"
+      - run: str1="}[^,]}"
       - run: str2="},"publishConfig":{"registry":"https://npm.pkg.github.com/@guardjs"}}"
       - run: echo ${str/str1/str2} > ./package.json
       - run: cat "./package.json"
