--- a/.github/workflows/gpr_publish.yml
+++ b/.github/workflows/gpr_publish.yml
@@ -27,9 +27,9 @@ jobs:
         with:
           node-version: 12
       - run: str="$(<./package.json)"
-      - run: str1="}[^,]}"
-      - run: str2="},"publishConfig":{"registry":"https://npm.pkg.github.com/@guardjs"}}"
-      - run: echo ${str/str1/str2} > ./package.json
+      - run: sed '}$ s/.$//' <<< $str
+      - run: str2="\"publishConfig\":{\"registry\":\"https://npm.pkg.github.com/@guardjs\"}"
+      - run: echo ,$str$str2} > ./package.json
       - run: cat "./package.json"
       - run: npm ci
       - run: npm test
