--- a/.github/workflows/gpr_publish.yml
+++ b/.github/workflows/gpr_publish.yml
@@ -28,8 +28,8 @@ jobs:
           node-version: 12
       - run: str="$(<./package.json)"
       - run: truncate -s-1 str
-      - run: str2="\"publishConfig\":{\"registry\":\"https://npm.pkg.github.com/@guardjs\"}"
-      - run: echo ,$str$str2} > ./package.json
+      - run: str2=",\"publishConfig\":{\"registry\":\"https://npm.pkg.github.com/@guardjs\"}}"
+      - run: echo $str $str2 > ./package.json
       - run: cat "./package.json"
       - run: npm ci
       - run: npm test
