--- a/.github/workflows/gpr_publish.yml
+++ b/.github/workflows/gpr_publish.yml
@@ -27,9 +27,9 @@ jobs:
         with:
           node-version: 12
       - run: str="$(<./package.json)"
-      - run: truncate -s-1 str
-      - run: str2=",\"publishConfig\":{\"registry\":\"https://npm.pkg.github.com/@guardjs\"}}"
-      - run: echo $str $str2 > ./package.json
+      - run: echo $str
+      - run: truncate -s-1 "$(<./package.json)" 
+      - run: echo ",\"publishConfig\":{\"registry\":\"https://npm.pkg.github.com/@guardjs\"}}" >> ./package.json
       - run: cat "./package.json"
       - run: npm ci
       - run: npm test
