--- a/.github/workflows/gpr_publish.yml
+++ b/.github/workflows/gpr_publish.yml
@@ -28,7 +28,7 @@ jobs:
           node-version: 12
       - run: str="$(<./package.json)"
       - run: echo $str
-      - run: truncate -s-1 "$(<./package.json)" 
+      - run: truncate -s-1 ./package.json
       - run: echo ",\"publishConfig\":{\"registry\":\"https://npm.pkg.github.com/@guardjs\"}}" >> ./package.json
       - run: cat "./package.json"
       - run: npm ci
