--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
   },
   "scripts": {
     "test": "cross-env ENV=test jest",
-    "prebuild": "babel . --out-dir predist",
-    "build": "webpack predist/index.js -o dist/index.js -p && webpack predist/bin/cli.js -o dist/bin/cli.js -p",
+    "doc": "jsdoc index.js README.md -d doc -p package.json",
+    "babel": "babel . --out-dir predist",
+    "prebuild": "npm run babel && npm run doc",
+    "build": "webpack predist/index.js -o dist/index.js -p",
+    "cli": "webpack predist/bin/cli.js -o dist/bin/cli.js -p",
     "postpublish": "git clean -fd"
   },
   "repository": {
@@ -37,6 +40,7 @@
     "babel-jest": "^25.1.0",
     "cross-env": "^7.0.0",
     "jest": "^24.9.0",
+    "jsdoc": "^3.6.4",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11"
   },
