--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "prebuild": "npm run doc && npm run babel",
     "webpack": "webpack predist/index.js -o dist/index.js -p",
     "build": "npm run webpack",
-    "preversion": "npm test && git add . && git commit -m \"version update\"",
+    "commit": "git add . && git commit -m \"version update\"",
+    "preversion": "npm test",
     "version": "npm run build && git add -A dist",
     "postversion": "git push && git push --tags && rm -rf build/temp",
     "shebang": "sed -i '#! /usr/bin/env node\n' dist/cli.js",
