--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   "scripts": {
     "test": "cross-env ENV=test jest",
     "doc": "jsdoc lib/index.js README.md -d docs -p",
-    "babel": "babel ./lib/ --out-dir predist",
-    "prebuild": "npm run doc && npm run babel",
+    "prebuild": "npm run doc",
     "build": "webpack predist/index.js -o index.js -p",
     "commit": "git add . && git commit -m \"version update\"",
     "preversion": "",
@@ -38,18 +37,13 @@
   },
   "homepage": "https://github.com/guardjs/extatistic#readme",
   "devDependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.8.4",
-    "@babel/preset-env": "^7.8.4",
-    "babel-jest": "^25.1.0",
-    "cross-env": "^7.0.0",
-    "jest": "^24.9.0",
-    "jsdoc": "^3.6.4",
-    "webpack": "^4.42.0",
-    "webpack-cli": "^3.3.11"
+    "cross-env": "^7.0.2",
+    "jest": "^26.1.0",
+    "jsdoc": "^3.6.4"
   },
   "dependencies": {
     "node-excel-export": "^1.4.4",
-    "yargs": "^15.1.0"
+    "yargonaut": "^1.1.4",
+    "yargs": "^15.4.0"
   }
 }
