--- a/.github/workflows/npm_publish.yml
+++ b/.github/workflows/npm_publish.yml
@@ -33,6 +33,6 @@ jobs:
           node-version: 12
           registry-url: https://registry.npmjs.org/
       - name: Publish NPM
-        run: cd dist && npm publish
+        run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
